crates/apollo-compiler/test_data/diagnostics/0062_root_operation_with_list.txt
Error: syntax error: expected R_CURLY, got [
   ╭─[0062_root_operation_with_list.graphql:2:10]
   │
 2 │   query: [Object]
   │          ┬  
   │          ╰── expected R_CURLY, got [
───╯
Error: syntax error: expected a StringValue, Name or OperationDefinition
   ╭─[0062_root_operation_with_list.graphql:2:10]
   │
 2 │   query: [Object]
   │          ┬  
   │          ╰── expected a StringValue, Name or OperationDefinition
───╯
Error: syntax error: expected definition
   ╭─[0062_root_operation_with_list.graphql:2:11]
   │
 2 │   query: [Object]
   │           ───┬──  
   │              ╰──── expected definition
───╯
Error: syntax error: expected a StringValue, Name or OperationDefinition
   ╭─[0062_root_operation_with_list.graphql:2:17]
   │
 2 │   query: [Object]
   │                 ┬  
   │                 ╰── expected a StringValue, Name or OperationDefinition
───╯
Error: syntax error: expected a StringValue, Name or OperationDefinition
   ╭─[0062_root_operation_with_list.graphql:3:1]
   │
 3 │ }
   │ ┬  
   │ ╰── expected a StringValue, Name or OperationDefinition
───╯
Error: missing query root operation type in schema definition
   ╭─[0062_root_operation_with_list.graphql:1:1]
   │
 1 │ ╭─▶ schema {
 2 │ ├─▶   query: [Object]
   │ │                       
   │ ╰─────────────────────── `query` root operation type must be defined here
───╯

